@@ -469,7 +469,6 @@ void ev_loop_destroy (EV_P);
 void ev_loop_fork (EV_P);
 
 ev_tstamp ev_now (EV_P); /* time w.r.t. timers and the eventloop, updated after each poll */
-void ev_now_update (EV_P);
 
 #else
 
@@ -503,10 +502,13 @@ void ev_default_destroy (void); /* destroy the default loop */
 /* you can actually call it at any time, anywhere :) */
 void ev_default_fork (void);
 
-unsigned int ev_backend (EV_P);     /* backend in use by loop */
-unsigned int ev_loop_count (EV_P);  /* number of loop iterations */
-unsigned int ev_loop_depth (EV_P);  /* #ev_loop enters - #ev_loop leaves */
+unsigned int ev_backend     (EV_P); /* backend in use by loop */
+unsigned int ev_loop_count  (EV_P); /* number of loop iterations */
+unsigned int ev_loop_depth  (EV_P); /* #ev_loop enters - #ev_loop leaves */
 void         ev_loop_verify (EV_P); /* abort if loop data corrupted */
+
+void ev_now_update     (EV_P); /* update event loop time */
+void ev_invoke_pending (EV_P); /* invoke all pending watchers */
 
 #if EV_WALK_ENABLE
 /* walk (almost) all watchers in the loop of a given type, invoking the */
