@@ -89,7 +89,11 @@ static void
 poll_poll (EV_P_ ev_tstamp timeout)
 {
   struct pollfd *p;
-  int res = poll (polls, pollcnt, (int)ceil (timeout * 1000.));
+  int res;
+  
+  if (expect_false (suspend_cb)) suspend_cb (EV_A);
+  res = poll (polls, pollcnt, (int)ceil (timeout * 1000.));
+  if (expect_false (resume_cb))  resume_cb  (EV_A);
 
   if (expect_false (res < 0))
     {
